--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,6 +43,27 @@
         .input-container button {
             padding: 10px 15px;
         }
+
+        .status {
+            margin-top: 10px;
+            font-weight: bold;
+        }
+
+        .message-self {
+            text-align: right;
+            background-color: #D1ECF1;
+            padding: 5px;
+            border-radius: 5px;
+            margin-bottom: 5px;
+        }
+
+        .message-other {
+            text-align: left;
+            background-color: #F8D7DA;
+            padding: 5px;
+            border-radius: 5px;
+            margin-bottom: 5px;
+        }
     </style>
 </head>
 <body>
@@ -52,14 +73,27 @@
 
     <label>JWT Token:</label>
     <input type="text" id="tokenInput" placeholder="Enter JWT Token">
-
-    <label>Receiver ID:</label>
-    <input type="text" id="receiverIdInput" placeholder="Enter Receiver ID">
-
     <button onclick="connect()">Connect</button>
     <button onclick="disconnect()">Disconnect</button>
 
-    <div id="status">Disconnected</div>
+    <div id="status" class="status">Disconnected</div>
+
+    <hr>
+
+    <h3>Participating Chat Rooms</h3>
+    <select id="chatRoomSelect" onchange="joinChatRoom()">
+        <option value="">Select a Chat Room</option>
+    </select>
+    <button onclick="leaveChatRoom()">Leave Chat Room</button>
+
+    <hr>
+
+    <h3>Check Online Status</h3>
+    <input type="text" id="receiverIdInput" placeholder="Enter Receiver ID">
+    <button onclick="checkOnlineStatus()">Check Online Status</button>
+    <div id="onlineStatus"></div>
+
+    <hr>
 
     <div class="messages" id="messages"></div>
 
@@ -68,23 +102,19 @@
         <button id="sendMessageButton">Send</button>
     </div>
 </div>
+
 <script>
     let stompClient = null;
-    let chatRoomId = null;
     let senderId = null;
     let nickname = null;
-    let profileImageUrl = null;
+    let chatRoomId = null;
 
     function extractUserInfo(token) {
         try {
             const base64Url = token.split('.')[1];
             const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
             const decoded = JSON.parse(atob(base64));
-            return {
-                senderId: decoded.id,
-                nickname: decoded.nickname || "Unknown",
-                profileImageUrl: decoded.profileImageUrl || ""
-            };
+            return {senderId: decoded.id, nickname: decoded.nickname || "Unknown"};
         } catch (e) {
             console.error("❌ Failed to extract user info from JWT:", e);
             return null;
@@ -93,10 +123,8 @@
 
     async function connect() {
         const token = document.getElementById("tokenInput").value.trim();
-        const receiverId = document.getElementById("receiverIdInput").value.trim();
-
-        if (!token || !receiverId) {
-            alert("Please enter JWT Token and Receiver ID!");
+        if (!token) {
+            alert("Please enter JWT Token!");
             return;
         }
 
@@ -108,90 +136,122 @@
 
         senderId = userInfo.senderId;
         nickname = userInfo.nickname;
-        profileImageUrl = userInfo.profileImageUrl;
 
         try {
-            const response = await fetch("/chat/rooms", {
-                method: "POST",
-                headers: {
-                    "Authorization": "Bearer " + token,
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({receiverId})
-            });
-
-            if (!response.ok) {
-                throw new Error("Failed to create or fetch chat room.");
-            }
-
-            const data = await response.json();
-            chatRoomId = data.chatRoomId;
-            console.log("✅ Chat Room ID:", chatRoomId);
-
             const socket = new SockJS(`http://localhost:8080/ws?token=${token}`);
             stompClient = Stomp.over(socket);
 
-            stompClient.connect({}, function (frame) {
+            stompClient.connect({userId: senderId}, async function (frame) {
                 console.log("✅ Connected to WebSocket:", frame);
-                document.getElementById("status").innerText = "Connected to WebSocket";
+                document.getElementById("status").innerText = "Connected";
 
-                if (stompClient.subscription) {
-                    stompClient.unsubscribe(stompClient.subscription);
-                }
+                // ✅ 서버에 온라인 상태 업데이트 요청
+                await fetch(`/chat/user-status/${senderId}`, {method: "POST"});
 
-                stompClient.subscription = stompClient.subscribe(`/topic/chat/${chatRoomId}`, function (message) {
-                    console.log("📩 Received message from WebSocket:", message);
-                    onMessageReceived(JSON.parse(message.body));
-                });
-
-                console.log("📢 Subscribed to WebSocket topic:", `/topic/chat/${chatRoomId}`);
-
-                fetchChatHistory(token);
+                fetchChatRooms(token);
             }, function (error) {
                 console.error("❌ WebSocket connection error:", error);
                 document.getElementById("status").innerText = "Connection Error!";
             });
 
         } catch (error) {
-            console.error("❌ Error creating chat room:", error);
+            console.error("❌ Error creating WebSocket connection:", error);
             alert("Error: " + error.message);
         }
     }
 
-    async function fetchChatHistory(token) {
+
+    function disconnect() {
+        if (stompClient) {
+            stompClient.disconnect(() => {
+                document.getElementById("status").innerText = "Disconnected";
+            }, {});
+            stompClient = null;
+        }
+    }
+
+    async function fetchChatRooms(token) {
         try {
-            console.log("📢 Fetching chat history...");
-            const response = await fetch(`/chat/${chatRoomId}/history`, {
+            const response = await fetch(`/chat/rooms`, {
                 method: "GET",
-                headers: {
-                    "Authorization": "Bearer " + token,
-                    "Content-Type": "application/json"
-                }
+                headers: {"Authorization": "Bearer " + token, "Content-Type": "application/json"}
             });
 
-            if (!response.ok) {
-                throw new Error("Failed to fetch chat history.");
-            }
+            if (!response.ok) throw new Error("Failed to fetch chat rooms.");
+
+            const chatRooms = await response.json();
+            console.log("✅ Participating chat rooms:", chatRooms);
+
+            const chatRoomSelect = document.getElementById("chatRoomSelect");
+            chatRoomSelect.innerHTML = `<option value="">Select a Chat Room</option>`;
+
+            chatRooms.forEach(room => {
+                const option = document.createElement("option");
+                option.value = room.chatRoomId;
+                option.text = `Chat Room ${room.chatRoomId}`;
+                chatRoomSelect.appendChild(option);
+            });
+
+        } catch (error) {
+            console.error("❌ Error fetching chat rooms:", error);
+        }
+    }
+
+    function joinChatRoom() {
+        const selectedChatRoomId = document.getElementById("chatRoomSelect").value;
+        if (!selectedChatRoomId) return;
+
+        chatRoomId = selectedChatRoomId;
+        console.log("✅ Joined Chat Room:", chatRoomId);
+
+        stompClient.subscribe(`/topic/chat/${chatRoomId}`, function (message) {
+            onMessageReceived(JSON.parse(message.body));
+        });
+
+        fetchChatHistory();
+    }
+
+    async function fetchChatHistory() {
+        try {
+            const token = document.getElementById("tokenInput").value.trim();
+            if (!chatRoomId) return;
+
+            const response = await fetch(`/chat/${chatRoomId}/history`, {
+                method: "GET",
+                headers: {"Authorization": "Bearer " + token, "Content-Type": "application/json"}
+            });
+
+            if (!response.ok) throw new Error("Failed to fetch chat history.");
 
             const messages = await response.json();
-
-            if (!Array.isArray(messages) || messages.length === 0) {
-                console.warn("⚠️ No chat history available.");
-                return;
-            }
-
-            console.log("✅ 채팅 내역 불러오기 성공:", messages);
+            console.log("✅ Chat history loaded:", messages);
 
             const messagesDiv = document.getElementById("messages");
-            messagesDiv.innerHTML = ""; // 이전 채팅 기록 지우기 (중복 방지)
+            messagesDiv.innerHTML = ""; // 기존 메시지 삭제
 
-            messages.forEach((message) => {
+            messages.forEach(message => {
                 onMessageReceived(message);
             });
 
-            messagesDiv.scrollTop = messagesDiv.scrollHeight; // 최신 메시지로 자동 스크롤
         } catch (error) {
             console.error("❌ Error fetching chat history:", error);
+        }
+    }
+
+    async function checkOnlineStatus() {
+        const receiverId = document.getElementById("receiverIdInput").value.trim();
+        if (!receiverId) {
+            alert("Please enter Receiver ID!");
+            return;
+        }
+
+        try {
+            const response = await fetch(`/chat/user-status/${receiverId}`);
+            const isOnline = await response.json();
+
+            document.getElementById("onlineStatus").innerText = isOnline ? "✅ Online" : "❌ Offline";
+        } catch (error) {
+            console.error("❌ Error checking online status:", error);
         }
     }
 
@@ -205,14 +265,19 @@
             return;
         }
 
+        // ✅ `profileImageUrl`이 undefined일 경우 기본 이미지 URL 설정
+        if (typeof profileImageUrl === "undefined") {
+            profileImageUrl = "https://cdn.example.com/default-profile.png"; // 기본 프로필 이미지 URL
+        }
+
         const chatMessage = {
             chatRoomId: chatRoomId,
             senderId: senderId,
             nickname: nickname,
-            profileImageUrl: profileImageUrl,
+            profileImageUrl: profileImageUrl,  // ✅ 기본값 보장
             content: messageContent,
             timestamp: Date.now(),
-            senderType: "SELF" // ✅ 본인이 보낸 메시지
+            senderType: "SELF"
         };
 
         console.log("📤 Preparing to send message:", chatMessage);
@@ -227,6 +292,7 @@
         messageInput.value = "";
     }
 
+
     function onMessageReceived(message) {
         console.log("📩 WebSocket 메시지 수신됨:", message);
 
@@ -239,28 +305,33 @@
             const messagesDiv = document.getElementById("messages");
 
             const messageDiv = document.createElement("div");
-            messageDiv.innerText = `[${new Date(message.timestamp).toLocaleTimeString()}] ${message.nickname}: ${message.content}`;
+            messageDiv.className = (message.senderId === senderId) ? "message-self" : "message-other";
 
-            // ✅ senderType을 활용하여 본인/상대 메시지 스타일 변경
-            if (message.senderId === senderId) {
-                messageDiv.style.textAlign = "right";  // 본인 메시지 오른쪽 정렬
-                messageDiv.style.backgroundColor = "#D1ECF1"; // 파란색 배경
-            } else {
-                messageDiv.style.textAlign = "left";   // 상대방 메시지 왼쪽 정렬
-                messageDiv.style.backgroundColor = "#F8D7DA"; // 빨간색 배경
-            }
+            // ✅ 프로필 이미지 처리 (없을 경우 기본값 설정)
+            const img = document.createElement("img");
+            img.src = message.profileImageUrl || "https://cdn.example.com/default-profile.png";
+            img.style.width = "30px";
+            img.style.height = "30px";
+            img.style.borderRadius = "50%";
+            img.style.marginRight = "10px";
 
+            const textNode = document.createTextNode(
+                `[${new Date(message.timestamp).toLocaleTimeString()}] ${message.nickname}: ${message.content}`
+            );
+
+            messageDiv.appendChild(img);
+            messageDiv.appendChild(textNode);
             messagesDiv.appendChild(messageDiv);
-            messagesDiv.scrollTop = messagesDiv.scrollHeight; // 최신 메시지로 자동 스크롤
         } catch (e) {
             console.error("❌ WebSocket 메시지 파싱 오류:", e);
         }
     }
 
+
+    document.getElementById("sendMessageButton").addEventListener("click", sendMessage);
     document.addEventListener("DOMContentLoaded", function () {
         document.getElementById("sendMessageButton").addEventListener("click", sendMessage);
     });
-
 </script>
 
 </body>
