--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -302,33 +302,6 @@
             console.error("❌ Error entering chat room:", error);
         }
     }
-    
-    //  async function fetchChatHistory() {
-    //     try {
-    //         const token = document.getElementById("tokenInput").value.trim();
-    //         if (!chatRoomId) return;
-    //
-    //         const response = await fetch(`/chat/${chatRoomId}/history`, {
-    //             method: "GET",
-    //             headers: {"Authorization": "Bearer " + token, "Content-Type": "application/json"}
-    //         });
-    //
-    //         if (!response.ok) throw new Error("Failed to fetch chat history.");
-    //
-    //         const messages = await response.json();
-    //         console.log("✅ Chat history loaded:", messages);
-    //
-    //         const messagesDiv = document.getElementById("messages");
-    //         messagesDiv.innerHTML = ""; // 기존 메시지 삭제
-    //
-    //         messages.forEach(message => {
-    //             onMessageReceived(message);
-    //         });
-    //
-    //     } catch (error) {
-    //         console.error("❌ Error fetching chat history:", error);
-    //     }
-    // }
 
     async function checkOnlineStatus() {
         const receiverId = document.getElementById("receiverIdInput").value.trim();
@@ -338,14 +311,19 @@
         }
 
         try {
-            const response = await fetch(`/chat/user-status/${receiverId}`);
-            const isOnline = await response.json();
+            const response = await fetch(`/chat/user-status/${receiverId}`, {
+                method: "GET",
+            });
 
+            if (!response.ok) throw new Error("Failed to check online status.");
+
+            const isOnline = await response.json();
             document.getElementById("onlineStatus").innerText = isOnline ? "✅ Online" : "❌ Offline";
         } catch (error) {
             console.error("❌ Error checking online status:", error);
         }
     }
+
 
     function sendMessage() {
         const messageInput = document.getElementById("messageInput");
